# auraflow

./: .gitignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: pages.yml
docs/: README.md  architecture.md  bring-up.md  firmware.md  hardware.md  homehub-backend.md  notes.txt  notifications.md  ota-strategy.md  provisioning-scenarios.md  roadmap.md  subscription-model.md  valve-setup.md  waterflow.md
scripts/: build-icons.sh  ota.py  publish-flasher.sh  send-provision.py  with-idf.sh
src/firmware/: main.ts  modbus.ts  moddable.d.ts  nvs.ts  ring-buffer.test.ts
src/firmware/c/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
src/firmware/c/main/: CMakeLists.txt  captive_portal.h  captive_portal_esp.c  http_config.h  http_config_esp.c  main.c  modbus.c  modbus.h  nvs_config.c  nvs_config.h  nvs_config_esp.c  ota.h  ota_esp.c  provisioning.c  provisioning.h  provisioning_esp.c  ring_buffer.c  ring_buffer.h  tuf2000m.c  tuf2000m.h  uplink.c  uplink.h  uplink_esp.c  wifi_mgr.c  wifi_mgr.h  wifi_mgr_esp.c
src/firmware/c/test/: Makefile  test_helpers.h  test_modbus.c  test_nvs_config.c  test_provisioning.c  test_ring_buffer.c  test_tuf2000m.c  test_uplink.c  test_wifi_mgr.c
src/firmware/ts/: README.md  main.ts  manifest.json  modbus.test.ts  provisioning.test.ts  provisioning.ts  ring-buffer.ts  tuf2000m.test.ts  tuf2000m.ts  uplink.ts  wifi.ts
web/: README.md  index.html  manifest.json  site.webmanifest
